fixed dark mode

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,15 @@
+:root {
+  --background-color: white;
+  --color: black
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --background-color: black;
+    --color: white
+  }
+}
+
 /* Basic Reset */
 * {
   margin: 0;
@@ -12,15 +24,8 @@ body, html {
   font-family: Arial, sans-serif;
   margin-left: auto;
   margin-right: auto;
-  background-color: white;
-  color: black;
-}
-
-@media (prefers-color-scheme: dark) {
-  body, html {
-    background-color: #121212;
-    color: white;
-  }
+  background-color:  var(--background-color);
+  color: var(--color);
 }
 
 .hidden {
@@ -66,7 +71,8 @@ nav a {
   #menu-open {
     width: 100%;
     height: 100%;
-    background-color: white;
+    background-color:  var(--background-color);
+    color: var(--color);
     position: fixed;
     z-index: 1;
     top: 0;
